updating docker file to include next.js

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,9 +22,20 @@ RUN chown -R node:node /workspace
 # Switch to the node user
 USER node
 
+# Copy package files and install dependencies
+COPY --chown=node:node awesome-copilot/package*.json ./awesome-copilot/
+WORKDIR /workspace/awesome-copilot
+
+# Install Node.js dependencies
+RUN npm install
+
 # Set environment variables
 ENV NODE_ENV=development
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV PATH="/workspace/awesome-copilot/node_modules/.bin:$PATH"
+
+# Go back to workspace root
+WORKDIR /workspace
 
 # Expose the ports
 EXPOSE 3000 5432
