--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -51,7 +51,7 @@
     }
   },
 
-  "postCreateCommand": "cd awesome-copilot && cp .env.example .env && npm install && npx prisma generate && npx prisma db push",
+  "postCreateCommand": "cd awesome-copilot && cp .viro.example .env && npm install && npx prisma generate && npx prisma db push",
 
   "remoteUser": "node"
 }
